--- a/app.yaml
+++ b/app.yaml
@@ -1,10 +1,29 @@
-application: staticme
+application: gcdc2013-scloud
 version: 1
 runtime: php
 api_version: 1
+#threadsafe: true
 
 handlers:
-- url: /.*
-  script: index.php
-- url: /controller
-  script: controller.php
+- url: /css
+  static_dir: css
+
+- url: /img
+  static_dir: img
+
+- url: /src
+  static_dir: src
+
+#- url: /.*
+#  script: index.php
+
+- url: /
+  script: router.php
+
+- url: /(.*\.(ico$|jpg$|png$|gif$|htm$|html$|css$|js$))
+  static_files: \1
+  upload: (.*\.(ico$|jpg$|png$|gif$|htm$|html$|css$|js$))
+  application_readable: true
+
+- url: /(.+)
+  script: router.php
